Build Java 8 universal Bukkit plugin artifact