@@ -4,19 +4,18 @@ import javax.crypto.Mac;
 import javax.crypto.spec.SecretKeySpec;
 import java.nio.charset.StandardCharsets;
 import java.security.MessageDigest;
-import java.util.HexFormat;
 
 /** Signs canonical request metadata; the secret is supplied at runtime via config.yml. */
 public final class HmacSigner {
     private HmacSigner() {}
 
     public static String sign(String secret, String timestamp, String nonce, String body) {
-        if (secret == null || secret.isBlank()) throw new IllegalArgumentException("signing secret is required");
+        if (secret == null || secret.trim().isEmpty()) throw new IllegalArgumentException("signing secret is required");
         String canonical = timestamp + "\n" + nonce + "\n" + body;
         try {
             Mac mac = Mac.getInstance("HmacSHA256");
             mac.init(new SecretKeySpec(secret.getBytes(StandardCharsets.UTF_8), "HmacSHA256"));
-            return HexFormat.of().formatHex(mac.doFinal(canonical.getBytes(StandardCharsets.UTF_8)));
+            return toHex(mac.doFinal(canonical.getBytes(StandardCharsets.UTF_8)));
         } catch (Exception e) {
             throw new IllegalStateException("Unable to sign telemetry request", e);
         }
@@ -25,5 +24,16 @@ public final class HmacSigner {
     public static boolean constantTimeEquals(String left, String right) {
         if (left == null || right == null) return false;
         return MessageDigest.isEqual(left.getBytes(StandardCharsets.UTF_8), right.getBytes(StandardCharsets.UTF_8));
+    }
+
+    private static String toHex(byte[] bytes) {
+        char[] digits = "0123456789abcdef".toCharArray();
+        char[] output = new char[bytes.length * 2];
+        for (int i = 0; i < bytes.length; i++) {
+            int value = bytes[i] & 0xff;
+            output[i * 2] = digits[value >>> 4];
+            output[i * 2 + 1] = digits[value & 0x0f];
+        }
+        return new String(output);
     }
 }
